--- a/app/views/teams/show/_join_requests.html.erb
+++ b/app/views/teams/show/_join_requests.html.erb
@@ -1,6 +1,6 @@
 <div class="pb-6 mt-10 mb-6 border-b border-slate-200 dark:border-slate-700">
   <h1 class="heading">Join Requests</h1>
-  <p class="text-soft">
+  <p class="text-soft text-pretty">
     <% num = join_requests.count %>
 
     <% if num == 0 %>
