--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
       <div class="relative flex items-center mb-6">
         <!-- Left Arrow -->
         <button type="button" data-action="mousedown->tabs#scrollLeft" data-tabs-target="leftArrow" aria-label="Scroll tabs left" class="opacity-0 pointer-events-none tab-container-scroll-left transition duration-300">
-          <%= inline_svg_tag 'icons/chevron-left.svg', class: 'size-5 text-soft' %>
+          <%= inline_svg_tag 'icons/chevron-left.svg', class: 'size-4 md:size-5 text-soft' %>
         </button>
 
         <div class="tab-container mx-auto" data-tabs-target="container">
@@ -25,36 +25,36 @@
           <span data-tabs-target="indicator" class="sliding-tab-indicator"></span>
 
           <button type="button" id="teamUpdatesTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'teamUpdatesTab' ? 'btn-tab-active' : '' %>">
-            <%= inline_svg_tag 'icons/team.svg', class: 'size-5' %>
+            <%= inline_svg_tag 'icons/team.svg', class: 'size-4 md:size-5' %>
             <span>Team Updates</span>
           </button>
 
           <button type="button" id="newTeamsTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'newTeams' ? 'btn-tab-active' : '' %>">
-            <%= inline_svg_tag 'icons/team-plus.svg', class: 'size-5' %>
+            <%= inline_svg_tag 'icons/team-plus.svg', class: 'size-4 md:size-5' %>
             <span>New Teams</span>
           </button>
 
           <% if current_user.owned_teams.any? %>
             <button type="button" id="joinRequestsTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'joinRequestsTab' ? 'btn-tab-active' : '' %>">
-              <%= inline_svg_tag 'icons/user-plus.svg', class: 'size-5' %>
+              <%= inline_svg_tag 'icons/user-plus.svg', class: 'size-4 md:size-5' %>
               <span>Join Requests</span>
             </button>
           <% end %>
 
           <button type="button" id="streakAdvancementsTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'streakAdvancementsTab' ? 'btn-tab-active' : '' %>">
-            <%= inline_svg_tag 'icons/medal.svg', class: 'size-5' %>
+            <%= inline_svg_tag 'icons/medal.svg', class: 'size-4 md:size-5' %>
             <span>Streak Advancements</span>
           </button>
 
           <button type="button" id="recentRunsTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'recentRunsTab' ? 'btn-tab-active' : '' %>">
-            <%= inline_svg_tag 'icons/runner.svg', class: 'size-4.5' %>
+            <%= inline_svg_tag 'icons/runner.svg', class: 'size-3.5 md:size-4.5' %>
             <span>Recent Runs</span>
           </button>
         </div>
 
         <!-- Right Arrow -->
         <button type="button" data-action="mousedown->tabs#scrollRight" data-tabs-target="rightArrow" aria-label="Scroll tabs right" class="opacity-0 pointer-events-none tab-container-scroll-right transition duration-300">
-          <%= inline_svg_tag 'icons/chevron-right.svg', class: 'size-5 text-soft' %>
+          <%= inline_svg_tag 'icons/chevron-right.svg', class: 'size-4 md:size-5 text-soft' %>
         </button>
       </div>
 
