feat: enable deauthorizing Strava with webhooks, and improve user account edit form

--- a/app/views/pages/strava_policy.html.erb
+++ b/app/views/pages/strava_policy.html.erb
@@ -18,7 +18,7 @@
       <p class="text-soft mb-2">We collect your data through the <%= link_to 'Strava API', 'https://developers.strava.com/', class: 'btn-link' %> when you authorize PaceMaker to access your Strava account. Data is fetched when:</p>
       <ul class="text-soft list-disc pl-4 space-y-0.5">
         <li>You manually import activities by clicking &#8220;Import runs from Strava&#8221; in your <%= link_to 'settings', edit_user_registration_path, class: 'btn-link' %>.</li>
-        <li>You enable automatic sync for new Strava activities by checking &#8220;Automatically sync new Strava activities&#8221; in your <%= link_to 'settings', edit_user_registration_path, class: 'btn-link' %>.</li>
+        <li>You enable automatic sync for new Strava activities by enabling &#8220;Automatically sync new Strava activities&#8221; in your <%= link_to 'settings', edit_user_registration_path, class: 'btn-link' %>.</li>
         <li>You update or delete your existing Strava activities.</li>
       </ul>
     </div>
