--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -18,12 +18,24 @@
     @apply text-slate-800 dark:text-slate-100;
   }
 
+  .text-normal-reverse {
+    @apply text-slate-100 dark:text-slate-800;
+  }
+
   .text-light {
     @apply text-slate-700 dark:text-slate-300;
   }
 
+  .text-light-reverse {
+    @apply text-slate-300 dark:text-slate-700;
+  }
+
   .text-soft {
     @apply text-slate-600 dark:text-slate-400;
+  }
+
+  .text-soft-reverse {
+    @apply text-slate-400 dark:text-slate-600;
   }
 
   .text-muted {
