--- a/app/assets/stylesheets/custom/forms.css
+++ b/app/assets/stylesheets/custom/forms.css
@@ -18,6 +18,15 @@
     }
   }
 
+  /* Default textarea styles. */
+  .form-textarea {
+    @apply px-3 py-2 border border-slate-300 shadow-inner bg-white font-normal text-base placeholder:text-slate-500 rounded-md block w-full focus:outline-none focus:ring-4 focus:ring-indigo-50 focus:border-indigo-500 text-slate-900 dark:bg-slate-800 dark:border-slate-700 dark:focus:ring-slate-700/30 dark:focus:border-indigo-700 dark:text-white dark:placeholder:text-slate-400;
+
+    &[disabled] {
+      @apply bg-slate-100/90 pointer-events-none select-none shadow-none cursor-not-allowed dark:bg-slate-800/90 dark:opacity-70;
+    }
+  }
+
   /* A much nicer file field button design. */
   .form-file {
     @apply block w-full text-sm text-slate-500 dark:text-slate-400
