--- a/app/views/pinned_pages/manage.html.erb
+++ b/app/views/pinned_pages/manage.html.erb
@@ -29,7 +29,7 @@
 
           <button type="button" data-action="mousedown->modal#open" data-modal-id="deletePage_<%= page.id %>" class="btn p-1.5 text-rose-600 dark:text-rose-500 hover:bg-rose-100 dark:hover:bg-rose-900/80 hover:text-rose-700 dark:hover:text-rose-300 shrink-0">
             <%= inline_svg_tag 'icons/unpin.svg', class: 'size-3.5 sm:size-5' %>
-            <span class="sr-only">Delete page</span>
+            <span class="sr-only">Unpin shortcut</span>
           </button>
 
           <%= link_to page.page_url, target: :_blank, class: 'btn btn-transparent p-1.5 shrink-0' do %>
