--- a/app/views/shared/_pwa_banner.html.erb
+++ b/app/views/shared/_pwa_banner.html.erb
@@ -2,7 +2,7 @@
   <div data-controller="pwa-banner" data-pwa-banner-target="banner" class="hidden z-50 mb-12 w-auto max-w-full rounded-xl border border-blue-300 bg-blue-50 p-4 text-blue-600 dark:border-blue-800 dark:bg-blue-950 dark:text-blue-400">
     <div class="flex items-center justify-between gap-4">
       <div>
-        <p class="max-sm:text-sm text-slate-800 dark:text-slate-100">Install PaceMaker as a progressive web app on your device for quick and easy access!</p>
+        <p class="max-sm:text-sm text-normal">Install PaceMaker as a progressive web app on your device for quick and easy access!</p>
         <%= link_to 'Learn how to install', edit_user_registration_path(tab: 'helpTab'), class: 'cursor-pointer font-semibold max-sm:text-sm text-blue-600 hover:text-blue-700 focus:ring-transparent dark:text-blue-400 dark:hover:text-blue-500 transition duration-200 ease-in-out' %>
       </div>
 
