--- a/app/views/messages/create.turbo_stream.erb
+++ b/app/views/messages/create.turbo_stream.erb
@@ -6,12 +6,14 @@
   <%= render 'form', message: Message.new %>
 <% end %>
 
-<%= turbo_stream.replace dom_id(@message.parent, :replies) do %>
-  <%= render 'messages/reply_button', message: @message.parent %>
-<% end %>
+<% if @message.parent.present? %>
+  <%= turbo_stream.replace dom_id(@message.parent, :replies) do %>
+    <%= render 'messages/reply_button', message: @message.parent %>
+  <% end %>
 
-<% if @message.parent.pinned? %>
-  <%= turbo_stream.replace "pinned_#{dom_id(@message.parent, :replies)}" do %>
-    <%= render 'messages/reply_button', message: @message.parent, pinned: true %>
+  <% if @message.parent.pinned? %>
+    <%= turbo_stream.replace "pinned_#{dom_id(@message.parent, :replies)}" do %>
+      <%= render 'messages/reply_button', message: @message.parent, pinned: true %>
+    <% end %>
   <% end %>
 <% end %>
