--- a/app/views/messages/_actions.html.erb
+++ b/app/views/messages/_actions.html.erb
@@ -1,4 +1,7 @@
 <% pinned = defined?(pinned) ? pinned : false %>
+<% user = message.user %>
+<% topic = message.topic %>
+<% team = topic.team %>
 
 <div
   data-controller="modal"
@@ -6,15 +9,15 @@
   data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
   data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
   data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
-  class="flex items-center gap-2.5 mt-1 <%= message.user == current_user || pinned ? 'justify-end' : 'ml-1' %>"
+  class="flex items-center gap-2.5 mt-1 <%= user == current_user || pinned ? 'justify-end' : 'ml-1' %>"
 >
-  <%= render 'like_button', message: message, pinned: pinned %>
+  <%= render 'messages/like_button', message: message, pinned: pinned %>
 
-  <%= render 'reply_button', message: message, pinned: pinned %>
+  <%= render 'messages/reply_button', message: message, pinned: pinned %>
 
-  <% if current_user.owns?(@team) %>
+  <% if current_user.owns?(team) %>
     <% unless message.pinned? %>
-      <% pinned_message = @team.messages.find_by(pinned: true) %>
+      <% pinned_message = topic.messages.find_by(pinned: true) %>
       <% if pinned_message.present? %>
 
         <button type="button" data-action="mousedown->modal#open" data-modal-id="pinMessage_<%= message.id %>" class="p-1 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-yellow-500 transition duration-200 ease-in-out">
@@ -40,13 +43,13 @@
         >
           <div class="flex flex-col space-y-1.5 text-center sm:text-left">
             <h2 class="text-lg font-semibold leading-none tracking-tight">Pin Message?</h2>
-            <p class="text-soft text-sm">Are you sure you want to pin this message? This will unpin your other pinned message.</p>
+            <p class="text-soft text-sm">Are you sure you want to pin this message? This will unpin your other pinned message in the topic <span class="font-semibold"><%= topic.title %></span>.</p>
           </div>
 
           <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
             <button data-action="mousedown->modal#close" data-modal-id="pinMessage_<%= message.id %>" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
 
-            <%= button_to 'Pin message', pin_team_message_path(message.team, message), method: :patch, data: { turbo_stream: true }, class: 'btn btn-primary font-bold w-full sm:w-auto whitespace-nowrap' %>
+            <%= button_to 'Pin message', pin_team_topic_message_path(team, topic, message), method: :patch, data: { turbo_stream: true }, class: 'btn btn-primary font-bold w-full sm:w-auto whitespace-nowrap' %>
           </div>
 
           <button data-action="mousedown->modal#close" type="button" data-modal-id="pinMessage_<%= message.id %>" class="modal-x-btn">
@@ -55,16 +58,16 @@
           </button>
         </div>
       <% else %>
-        <%= button_to pin_team_message_path(message.team, message), method: :patch, data: { turbo_stream: true }, class: 'p-1 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-yellow-500 transition duration-200 ease-in-out' do %>
-          <%= inline_svg_tag 'icons/pin.svg', class: 'size-4 mt-px' %>
+        <%= button_to pin_team_topic_message_path(team, topic, message), method: :patch, data: { turbo_stream: true }, class: 'p-1 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-yellow-500 transition duration-200 ease-in-out' do %>
+          <%= inline_svg_tag 'icons/pin.svg', class: 'size-4 mt-0.5' %>
           <span class="sr-only">Pin message</span>
         <% end %>
       <% end %>
     <% end %>
   <% end %>
 
-  <% if message.user == current_user && message.editable? %>
-    <%= link_to edit_team_message_path(@team, message, pinned: pinned),
+  <% if user == current_user && message.editable? %>
+    <%= link_to edit_team_topic_message_path(message.team, message.topic, message, pinned: pinned),
                 data: { turbo_stream: true, turbo_frame: @pin ? "pinned_#{dom_id(message)}" : dom_id(message) },
                 class: 'p-1 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-orange-500 transition duration-200 ease-in-out' do
     %>
@@ -73,7 +76,7 @@
     <% end %>
   <% end %>
 
-  <% if (message.user == current_user && message.deletable?) || current_user.owns?(@team) %>
+  <% if (user == current_user && message.deletable?) || current_user.owns?(team) %>
     <button type="button" data-action="mousedown->modal#open" data-modal-id="deleteMessage_<%= message.id %>" class="p-1 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-rose-500 transition duration-200 ease-in-out">
       <%= inline_svg_tag 'icons/trash.svg', class: 'size-4 mt-px' %>
       <span class="sr-only">Delete message</span>
@@ -103,7 +106,7 @@
       <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
         <button data-action="mousedown->modal#close" data-modal-id="deleteMessage_<%= message.id %>" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
 
-        <%= button_to 'Delete message', team_message_path(@team, message), method: :delete, data: { turbo_stream: true }, class: 'btn btn-destructive font-bold w-full sm:w-auto whitespace-nowrap' %>
+        <%= button_to 'Delete message', team_topic_message_path(team, topic, message), method: :delete, data: { turbo_stream: true }, class: 'btn btn-destructive font-bold w-full sm:w-auto whitespace-nowrap' %>
       </div>
 
       <button data-action="mousedown->modal#close" type="button" data-modal-id="deleteMessage_<%= message.id %>" class="modal-x-btn">
