--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,5 +1,8 @@
-<%= turbo_frame_tag 'new_message_form' do %>
-  <%= form_with(model: message, url: team_messages_path, id: 'messageForm', data: { turbo_frame: '_top' }) do |form| %>
+<% topic = message.topic %>
+<% team = topic.team %>
+
+<div id="new_message_form">
+  <%= form_with(model: message, url: team_topic_messages_path(team, topic), id: 'messageForm', data: { turbo_frame: '_top' }) do |form| %>
     <%= form.hidden_field :parent_id, value: nil, data: { reply_message_target: 'parent' } %>
 
     <div class="hidden mb-2" data-reply-message-target="replyMessage">
@@ -33,4 +36,4 @@
       <% end %>
     </div>
   <% end %>
-<% end %>
+</div>
