--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,6 +1,6 @@
-<%# message.reload %>
 <% user = message.user %>
-<% parent = message.parent || nil %>
+<% topic = message.topic %>
+<% parent = message.parent %>
 
 <div id="<%= dom_id(message) %>" class="grid grid-cols-[auto_1fr] gap-x-1.5">
   <div class="flex flex-col justify-end">
@@ -25,7 +25,7 @@
         </div>
       <% end %>
 
-      <div class="z-10 p-2 pb-1 sm:p-3 sm:pb-2 rounded-2xl <%= message.user == current_user ? 'rounded-br-sm' : 'rounded-bl-sm' %> <%= user == current_user ? 'bg-gradient-to-b from-indigo-500 to-indigo-600 selection:bg-white/80 selection:text-indigo-500' : 'bg-slate-100 dark:bg-slate-700 border dark:border-slate-600' %> shadow dark:shadow-none">
+      <div class="z-10 p-2 pb-1 sm:p-3 sm:pb-2 rounded-2xl <%= user == current_user ? 'rounded-br-sm' : 'rounded-bl-sm' %> <%= user == current_user ? 'bg-gradient-to-b from-indigo-500 to-indigo-600 selection:bg-white/80 selection:text-indigo-500' : 'bg-slate-100 dark:bg-slate-700 border dark:border-slate-600' %> shadow dark:shadow-none">
         <% unless user == current_user %>
           <% text_colors = ['text-rose-500', 'text-orange-500', 'text-amber-500', 'text-emerald-500', 'text-blue-500', 'text-indigo-500'] %>
           <% text_color = text_colors[message.user_id % text_colors.size] %>
@@ -49,5 +49,5 @@
 
   <div></div>
 
-  <%= render 'messages/actions', message: message %>
+  <%= render 'messages/actions', message: message unless topic.closed? %>
 </div>
