style: increase bottom margin of footer on small screens

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
             <%= yield %>
           </main>
 
-          <footer class="text-center mt-4 text-sm text-soft p-4">
+          <footer class="text-center mt-4 text-sm text-soft p-4 max-sm:mb-28">
             <p class="mb-1">&copy; <%= Time.current.year %> PaceMaker. All rights reserved.</p>
             <div class="flex justify-center gap-x-6">
                 <%= link_to 'Privacy Policy', privacy_policy_path, class: 'btn-link underline' %>
