--- a/app/views/teams/show/_member.html.erb
+++ b/app/views/teams/show/_member.html.erb
@@ -6,8 +6,8 @@
   data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
   class="card"
 >
-  <div class="flex flex-wrap-reverse items-end gap-3">
-    <%= link_to team_member_path(team, member), data: { turbo: false }, class: 'group flex items-center gap-3 flex-1' do %>
+  <div class="flex flex-wrap-reverse items-end justify-end gap-3">
+    <%= link_to team_member_path(team, member), data: { turbo: false }, class: 'group flex items-center gap-3 grow pb-4' do %>
       <%= render 'shared/user_photo', user: member, size: :xs, icon_background: :darker %>
 
       <div class="flex-1 leading-tight">
@@ -21,51 +21,49 @@
     <% end %>
 
     <% if current_user.owns?(team) && member != current_user %>
-      <div class="shrink-0">
-        <button data-action="mousedown->modal#open" data-modal-id="removeMember" class="btn btn-sm btn-destructive btn-muted whitespace-nowrap">
-          Remove
-        </button>
+      <button data-action="mousedown->modal#open" data-modal-id="removeMember" class="btn btn-sm btn-destructive btn-muted whitespace-nowrap shrink-0">
+        Remove
+      </button>
 
-        <!-- Remove Member Modal Backdrop -->
-        <div
-          data-modal-target="backdrop"
-          data-modal-id="removeMember"
-          data-action="mousedown->modal#backdropClose"
-          class="modal-backdrop opacity-0 pointer-events-none"></div>
+      <!-- Remove Member Modal Backdrop -->
+      <div
+        data-modal-target="backdrop"
+        data-modal-id="removeMember"
+        data-action="mousedown->modal#backdropClose"
+        class="modal-backdrop opacity-0 pointer-events-none"></div>
 
-        <!-- Remove Member Modal -->
-        <div
-          id="removeMember"
-          role="dialog"
-          aria-label="Remove Team Member Confirmation"
-          tabindex="-1"
-          data-modal-target="modal"
-          class="modal opacity-0 scale-75 pointer-events-none"
-        >
-          <div class="flex flex-col space-y-1.5 text-center sm:text-left">
-            <h2 class="text-lg font-semibold leading-none tracking-tight">Remove Team Member?</h2>
-            <p class="text-soft text-sm">Are you sure you want to remove <span class="font-bold"><%= member.default_name %></span> from the team <span class="font-bold"><%= team.name %></span>? <%= member.first_name %> will have to send a new join request if <%= member.gender_subject %> <%= member.gender? ? 'wants' : 'want' %> to rejoin.</p>
-          </div>
-
-          <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
-            <button data-action="mousedown->modal#close" data-modal-id="removeMember" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Nevermind</button>
-            <%= button_to "Remove #{member.default_name}",
-                          remove_member_team_path(team_id: team.id, user_id: member.id),
-                          method: :post,
-                          class: 'btn btn-destructive font-bold w-full whitespace-nowrap'
-            %>
-          </div>
-
-          <button data-action="mousedown->modal#close" type="button" data-modal-id="removeMember" class="modal-x-btn">
-            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
-            <span class="sr-only">Close</span>
-          </button>
+      <!-- Remove Member Modal -->
+      <div
+        id="removeMember"
+        role="dialog"
+        aria-label="Remove Team Member Confirmation"
+        tabindex="-1"
+        data-modal-target="modal"
+        class="modal opacity-0 scale-75 pointer-events-none"
+      >
+        <div class="flex flex-col space-y-1.5 text-center sm:text-left">
+          <h2 class="text-lg font-semibold leading-none tracking-tight">Remove Team Member?</h2>
+          <p class="text-soft text-sm">Are you sure you want to remove <span class="font-bold"><%= member.default_name %></span> from the team <span class="font-bold"><%= team.name %></span>? <%= member.first_name %> will have to send a new join request if <%= member.gender_subject %> <%= member.gender? ? 'wants' : 'want' %> to rejoin.</p>
         </div>
+
+        <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
+          <button data-action="mousedown->modal#close" data-modal-id="removeMember" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Nevermind</button>
+          <%= button_to "Remove #{member.default_name}",
+                        remove_member_team_path(team_id: team.id, user_id: member.id),
+                        method: :post,
+                        class: 'btn btn-destructive font-bold w-full whitespace-nowrap'
+          %>
+        </div>
+
+        <button data-action="mousedown->modal#close" type="button" data-modal-id="removeMember" class="modal-x-btn">
+          <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
+          <span class="sr-only">Close</span>
+        </button>
       </div>
     <% end %>
   </div>
 
-  <div class="mt-4 pt-4 border-t dark:border-slate-700 flex items-end justify-between">
+  <div class="pt-4 border-t dark:border-slate-700 flex items-end justify-between">
     <div class="flex items-start gap-1.5 flex-1">
       <%= inline_svg_tag 'icons/user-group.svg', class: 'size-4 text-soft shrink-0' %>
       <p class="text-soft text-xs">
