--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,5 @@
-<div class="card">
-  <%= link_to user, data: { turbo: false }, class: 'group flex items-center gap-3' do %>
+<%= link_to user, data: { turbo: false }, class: 'group block card' do %>
+  <div class="flex items-center gap-3">
     <%= render 'shared/user_photo', user: user, size: :xs, icon_background: :darker %>
 
     <div class="flex-1">
@@ -7,10 +7,9 @@
         <%= user.default_name %>
         <%= content_tag(:span, '(You)', class: 'text-soft text-xs') if user == current_user %>
       </p>
-
       <%= content_tag(:p, user.username, class: 'text-soft text-sm') if user.display_name.present? %>
     </div>
-  <% end %>
+  </div>
 
   <% if user != current_user %>
     <% coach_teams = user.owned_teams_in_common(current_user) %>
@@ -21,17 +20,17 @@
         <% if coach_teams.any? %>
           <div class="flex items-start gap-1.5">
             <%= inline_svg_tag 'icons/user.svg', class: 'size-4 text-soft shrink-0' %>
-            <p class="text-soft text-xs">Coach of: <%= list(items: coach_teams.map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }).html_safe %></p>
+            <p class="text-soft text-xs">Coach of: <%= list(items: coach_teams.map(&:name)) %></p>
           </div>
         <% end %>
 
         <% if member_teams.any? %>
           <div class="flex items-start gap-1.5">
             <%= inline_svg_tag 'icons/user-group.svg', class: 'size-4 text-soft shrink-0' %>
-            <p class="text-soft text-xs">Member of: <%= list(items: member_teams.map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }).html_safe %></p>
+            <p class="text-soft text-xs">Member of: <%= list(items: member_teams.map(&:name)) %></p>
           </div>
         <% end %>
       </div>
     <% end %>
   <% end %>
-</div>
+<% end %>
