--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -8,9 +8,12 @@
     </div>
 
     <div class="grow">
-      <p class='font-bold transition duration-200 ease-in-out group-hover/link:text-indigo-600 dark:group-hover/link:text-indigo-500'>
-        <%= topic.title %>
-      </p>
+      <div class="flex items-center gap-1.5">
+        <%= inline_svg_tag 'icons/star-filled.svg', class: 'size-3 text-yellow-500' if topic.favorited_by?(current_user) %>
+        <p class='font-bold transition duration-200 ease-in-out group-hover/link:text-indigo-600 dark:group-hover/link:text-indigo-500'>
+          <%= topic.title %>
+        </p>
+      </div>
 
       <% preview_message = topic.last_message %>
       <% if preview_message %>
@@ -29,7 +32,7 @@
       data-dropdown-hide-dropdown-class="pointer-events-none scale-75 opacity-0"
       data-dropdown-show-dropdown-class="pointer-events-auto scale-100 opacity-100"
       data-dropdown-dropdown-open-class="bg-slate-200/50 dark:bg-slate-700/50 ring-2 ring-indigo-500/50"
-      class="relative rounded-lg grid place-items-center"
+      class="relative rounded-lg grid place-items-center my-2 group-first/container:mt-0 group-last/container:mb-0"
     >
       <button
         type="button"
@@ -46,31 +49,59 @@
       >
         <% if topic.open? %>
           <!-- Open Edit Topic Modal Button -->
-          <button data-action="mousedown->modal#open" data-modal-id="editTopicModal" class="dropdown-option-primary">
+          <button data-action="mousedown->modal#open" data-modal-id="editTopicModal_<%= topic.id %>" class="dropdown-option-primary">
             <%= inline_svg_tag 'icons/pencil.svg', class: 'size-5' %>
             Edit topic
           </button>
 
+          <% if topic.favorited_by?(current_user) %>
+            <%= button_to unfavorite_team_topic_path(team, topic), method: :patch, class: 'dropdown-option' do %>
+              <%= inline_svg_tag 'icons/star-slash.svg', class: 'size-5' %>
+              Unfavorite topic
+            <% end %>
+          <% else %>
+            <%= button_to favorite_team_topic_path(team, topic), method: :patch, class: 'dropdown-option' do %>
+              <%= inline_svg_tag 'icons/star.svg', class: 'size-5' %>
+              Favorite topic
+            <% end %>
+          <% end %>
+
           <!-- Open Close Topic Modal Button -->
-          <button data-action="mousedown->modal#open" data-modal-id="closeTopicModal" class="dropdown-option">
+          <button data-action="mousedown->modal#open" data-modal-id="closeTopicModal_<%= topic.id %>" class="dropdown-option">
             <%= inline_svg_tag 'icons/lock.svg', class: 'size-5' %>
             Close topic
           </button>
         <% else %>
           <!-- Open Reopen Topic Modal Button -->
-          <button data-action="mousedown->modal#open" data-modal-id="reopenTopicModal" class="dropdown-option">
+          <button data-action="mousedown->modal#open" data-modal-id="reopenTopicModal_<%= topic.id %>" class="dropdown-option">
             <%= inline_svg_tag 'icons/unlock.svg', class: 'size-5' %>
             Reopen topic
           </button>
         <% end %>
 
         <!-- Open Delete Topic Modal Button -->
-        <button data-action="mousedown->modal#open" data-modal-id="deleteTopicModal" class="dropdown-option-destructive">
+        <button data-action="mousedown->modal#open" data-modal-id="deleteTopicModal_<%= topic.id %>" class="dropdown-option-destructive">
           <%= inline_svg_tag 'icons/trash.svg', class: 'size-5' %>
           Delete topic
         </button>
       </div>
     </div>
+  <% else %>
+    <% if topic.open? %>
+      <div class="my-2 group-first/container:mt-0 group-last/container:mb-0">
+        <% if topic.favorited_by?(current_user) %>
+          <%= button_to unfavorite_team_topic_path(team, topic), method: :patch, class: 'z-0 p-[5px] rounded-lg opacity-70 transition-opacity hover:opacity-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50 text-yellow-500' do %>
+            <%= inline_svg_tag 'icons/star-filled.svg', class: 'size-5' %>
+            <span class="sr-only">Unfavorite topic</span>
+          <% end %>
+        <% else %>
+          <%= button_to favorite_team_topic_path(team, topic), method: :patch, class: 'z-0 p-[5px] rounded-lg opacity-70 transition-opacity hover:opacity-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50 hover:text-yellow-500' do %>
+            <%= inline_svg_tag 'icons/star.svg', class: 'size-5' %>
+            <span class="sr-only">Favorite topic</span>
+          <% end %>
+        <% end %>
+      </div>
+    <% end %>
   <% end %>
 </div>
 
@@ -79,13 +110,13 @@
     <!-- Edit Topic Modal Backdrop -->
     <div
       data-modal-target="backdrop"
-      data-modal-id="editTopicModal"
+      data-modal-id="editTopicModal_<%= topic.id %>"
       data-action="mousedown->modal#backdropClose"
       class="modal-backdrop opacity-0 pointer-events-none"></div>
 
     <!-- Edit Topic Modal -->
     <div
-      id="editTopicModal"
+      id="editTopicModal_<%= topic.id %>"
       role="dialog"
       aria-label="Edit Topic Form"
       tabindex="-1"
@@ -96,10 +127,10 @@
         <h2 class="text-lg font-semibold leading-none tracking-tight">Edit Topic</h2>
       </div>
 
-      <%= render 'form', topic: %>
+      <%= render 'form', topic: topic, editing: true %>
 
       <!-- Close button -->
-      <button data-action="mousedown->modal#close" type="button" data-modal-id="editTopicModal" class="modal-x-btn">
+      <button data-action="mousedown->modal#close" type="button" data-modal-id="editTopicModal_<%= topic.id %>" class="modal-x-btn">
         <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
         <span class="sr-only">Close</span>
       </button>
@@ -108,13 +139,13 @@
     <!-- Close Topic Modal Backdrop -->
     <div
       data-modal-target="backdrop"
-      data-modal-id="closeTopicModal"
+      data-modal-id="closeTopicModal_<%= topic.id %>"
       data-action="mousedown->modal#backdropClose"
       class="modal-backdrop opacity-0 pointer-events-none"></div>
 
     <!-- Close Topic Modal -->
     <div
-      id="closeTopicModal"
+      id="closeTopicModal_<%= topic.id %>"
       role="dialog"
       aria-label="Close Topic Confirmation"
       tabindex="-1"
@@ -127,7 +158,7 @@
       </div>
 
       <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
-        <button data-action="mousedown->modal#close" data-modal-id="closeTopicModal" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
+        <button data-action="mousedown->modal#close" data-modal-id="closeTopicModal_<%= topic.id %>" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
         <%= button_to 'Close topic',
               close_team_topic_path(team, topic),
               method: :patch,
@@ -136,7 +167,7 @@
         %>
       </div>
 
-      <button data-action="mousedown->modal#close" type="button" data-modal-id="closeTopicModal" class="modal-x-btn">
+      <button data-action="mousedown->modal#close" type="button" data-modal-id="closeTopicModal_<%= topic.id %>" class="modal-x-btn">
         <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
         <span class="sr-only">Close</span>
       </button>
@@ -145,13 +176,13 @@
     <!-- Reopen Topic Modal Backdrop -->
     <div
       data-modal-target="backdrop"
-      data-modal-id="reopenTopicModal"
+      data-modal-id="reopenTopicModal_<%= topic.id %>"
       data-action="mousedown->modal#backdropClose"
       class="modal-backdrop opacity-0 pointer-events-none"></div>
 
     <!-- Reopen Topic Modal -->
     <div
-      id="reopenTopicModal"
+      id="reopenTopicModal_<%= topic.id %>"
       role="dialog"
       aria-label="Reopen Topic Confirmation"
       tabindex="-1"
@@ -164,7 +195,7 @@
       </div>
 
       <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
-        <button data-action="mousedown->modal#close" data-modal-id="reopenTopicModal" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
+        <button data-action="mousedown->modal#close" data-modal-id="reopenTopicModal_<%= topic.id %>" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
         <%= button_to 'Reopen topic',
               reopen_team_topic_path(team, topic),
               method: :patch,
@@ -173,7 +204,7 @@
         %>
       </div>
 
-      <button data-action="mousedown->modal#close" type="button" data-modal-id="reopenTopicModal" class="modal-x-btn">
+      <button data-action="mousedown->modal#close" type="button" data-modal-id="reopenTopicModal_<%= topic.id %>" class="modal-x-btn">
         <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
         <span class="sr-only">Close modal</span>
       </button>
@@ -183,13 +214,13 @@
   <!-- Delete Topic Modal Backdrop -->
   <div
     data-modal-target="backdrop"
-    data-modal-id="deleteTopicModal"
+    data-modal-id="deleteTopicModal_<%= topic.id %>"
     data-action="mousedown->modal#backdropClose"
     class="modal-backdrop opacity-0 pointer-events-none"></div>
 
   <!-- Delete Topic Modal -->
   <div
-    id="deleteTopicModal"
+    id="deleteTopicModal_<%= topic.id %>"
     role="dialog"
     aria-label="Delete Topic Confirmation"
     tabindex="-1"
@@ -202,7 +233,7 @@
     </div>
 
     <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
-      <button data-action="mousedown->modal#close" data-modal-id="deleteTopicModal" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
+      <button data-action="mousedown->modal#close" data-modal-id="deleteTopicModal_<%= topic.id %>" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
       <%= button_to 'Delete topic',
                     team_topic_path(team, topic),
                     method: :delete,
@@ -211,7 +242,7 @@
         %>
     </div>
 
-    <button data-action="mousedown->modal#close" type="button" data-modal-id="deleteTopicModal" class="modal-x-btn">
+    <button data-action="mousedown->modal#close" type="button" data-modal-id="deleteTopicModal_<%= topic.id %>" class="modal-x-btn">
       <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
       <span class="sr-only">Close</span>
     </button>
