--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -3,6 +3,7 @@
   <div class="mb-6 border-b border-slate-200 dark:border-slate-700 sticky top-0 bg-slate-50 dark:bg-slate-900">
     <%= link_to team_topics_path(@team), class: 'group flex items-center gap-3 pt-4 pb-2', aria: { label: "Back to #{@team.name} topics" } do %>
       <%= inline_svg_tag 'icons/chevron-left-bold.svg', class: 'size-6 transition ease-in-out duration-200 group-hover:text-indigo-600 dark:group-hover:text-indigo-500' %>
+
       <div class="flex items-center justify-start gap-4">
         <% if @topic.main %>
           <div class="grid place-items-center size-9 rounded-md bg-gradient-to-b from-slate-200 to-slate-300 dark:from-slate-700 dark:to-slate-800 shrink-0">
@@ -13,15 +14,16 @@
             <%= inline_svg_tag "icons/hashtag.svg", class: 'size-5 text-light' %>
           </div>
         <% end %>
+
         <div>
           <p class="text-lg font-bold transition ease-in-out duration-200 group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= @topic.title %></p>
           <p class="text-soft text-xs"><%= @team.name %></p>
         </div>
       </div>
     <% end %>
-    <% pinned_message = @topic.messages.find_by(pinned: true) %>
-    <% if pinned_message.present? %>
-      <%= render 'pinned_message', message: pinned_message %>
+
+    <% if @pinned_message.present? %>
+      <%= render 'pinned_message', message: @pinned_message %>
     <% else %>
       <div id="pinned_message"></div>
     <% end %>
@@ -46,6 +48,7 @@
     <% end %>
   </div>
 </div>
+
 <script>
   window.onload = () => {
     document.addEventListener('keydown', function(event) {
