--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -11,7 +11,7 @@
   <%= link_to @team, class: 'group flex items-center gap-3 z-40 py-4 border-b border-slate-200 dark:border-slate-700 sticky top-0 bg-slate-50 dark:bg-slate-900', aria: { label: "Back to #{@team.name}" } do %>
     <%= inline_svg_tag 'icons/chevron-left-bold.svg', class: 'size-6 transition ease-in-out duration-200 group-hover:text-indigo-600 dark:group-hover:text-indigo-500' %>
     <div class="flex items-center justify-start gap-4">
-      <%= render 'shared/team_photo', team: @team, size: :xs, icon_background: :darker %>
+      <%= render 'shared/team_photo', team: @team, size: :xs %>
       <p class="text-lg font-bold transition ease-in-out duration-200 group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= @team.name %></p>
     </div>
   <% end %>
