feat: add email address to `_feedback.html.erb`

--- a/app/views/users/_feedback.html.erb
+++ b/app/views/users/_feedback.html.erb
@@ -80,3 +80,8 @@
     <%= link_to 'Cancel', :back, data: { turbo: false }, class: 'btn btn-dark btn-muted' %>
   </div>
 <% end %>
+
+
+<div class="mt-12 text-center">
+  <p class="text-soft">You can also send any feedback to <%= mail_to 'get.pace.maker@gmail.com', 'get.pace.maker@gmail.com', class: 'btn-link hover:underline' %>.</p>
+</div>
