--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -8,12 +8,10 @@
   data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
   class="max-w-3xl mx-auto my-16"
 >
-  <%= link_to @team, class: 'group flex items-center gap-3 z-40 py-4 border-b border-slate-200 dark:border-slate-700 sticky top-0 bg-slate-50 dark:bg-slate-900', aria: { label: "Back to #{@team.name}" } do %>
-    <%= inline_svg_tag 'icons/chevron-left-bold.svg', class: 'size-6 transition ease-in-out duration-200 group-hover:text-indigo-600 dark:group-hover:text-indigo-500' %>
-    <div class="flex items-center justify-start gap-4">
-      <%= render 'shared/team_photo', team: @team, size: :xs %>
-      <p class="text-lg font-bold transition ease-in-out duration-200 group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= @team.name %></p>
-    </div>
+  <%= link_to @team, class: 'group flex items-center gap-3 pt-4 pb-2 pr-2 btn-link-soft w-max', aria: { label: "Back to #{@team.name}" } do %>
+    <%= inline_svg_tag 'icons/chevron-left-bold.svg', class: 'size-4 transition ease-in-out duration-200' %>
+
+    <span class="text-sm transition ease-in-out duration-200">Back to <%= @team.name %></span>
   <% end %>
 
   <div class="mb-24">
